base/networkpolicies/allow-from-ingress/allow-from-ingress-networkpolicy.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-from-ingress
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-external
      podSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
  podSelector: {}
  policyTypes:
    - Ingress
